# diagtree

./: CMakeLists.txt  LICENSE  README.md
examples/: data.yaml  data2.yaml  example.cpp
include/diagtree/: tree.hpp
